[package]
name = "iotawatt-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
prometheus_exporter = "0.8"
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
